// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test FileName should render correctly 1`] = `
<div>
  <div
    class="file-title"
  >
    abc.svg*
  </div>
</div>
`;

exports[`test FileName should render correctly 2`] = `
<div>
  <div
    class="file-title"
  >
    Untitled
  </div>
</div>
`;
